--- a/newslyzer/package.json
+++ b/newslyzer/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
