--- a/newslyzer/package.json
+++ b/newslyzer/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "axios": "^1.7.7",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
     "babel-preset-next": "^1.4.0",
