--- a/newslyzer/package.json
+++ b/newslyzer/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.1",
     "mongoose": "^8.7.0",
     "next": "14.2.14",
     "react": "^18",
