--- a/newslyzer/package.json
+++ b/newslyzer/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.14.1"
   },
   "devDependencies": {
