--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,219 +1,219 @@
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.9
-aiosignal==1.3.1
-annotated-types==0.6.0
-anyio==3.7.1
-appnope==0.1.3
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.1.0
-awscli==1.30.7
-Babel==2.13.1
-bcrypt==4.1.2
-beautifulsoup4==4.12.2
-black==24.4.2
-bleach==6.1.0
-blinker==1.7.0
-boto3==1.28.63
-botocore==1.32.7
-certifi==2024.8.30
-cffi==1.16.0
-charset-normalizer==3.3.0
-click==8.1.7
-colorama==0.4.4
-comm==0.2.0
-contourpy==1.3.0
-cryptography==42.0.5
-cssselect==1.2.0
-cycler==0.12.1
-debugpy==1.8.0
-decorator==5.1.1
-defusedxml==0.7.1
-deprecation==2.1.0
-distlib==0.3.8
-distro==1.8.0
-dnspython==2.4.2
-docker-pycreds==0.4.0
-docutils==0.16
-email_validator==2.2.0
-executing==2.0.1
-fastapi==0.111.1
-fastapi-cli==0.0.4
-fastjsonschema==2.19.0
-feedfinder2==0.0.4
-feedparser==6.0.11
-filelock==3.16.1
-Flask==1.1.4
-fonttools==4.54.1
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2024.9.0
-gitdb==4.0.11
-GitPython==3.1.43
-gotrue==2.6.1
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.2
-httptools==0.6.1
-httpx==0.25.1
-huggingface-hub==0.25.1
-hyperframe==6.0.1
-idna==3.4
-ipykernel==6.27.1
-ipython==8.18.1
-ipywidgets==8.1.1
-isoduration==20.11.0
-isort==5.13.2
-itsdangerous==1.1.0
-jedi==0.19.1
-jieba3k==0.35.1
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.14
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.11.2
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.12.1
-jupyter_server_terminals==0.4.4
-jupyterlab==4.0.9
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-kiwisolver==1.4.7
-load-dotenv==0.1.0
-loguru==0.7.2
-lxml==5.3.0
-lxml_html_clean==0.2.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-motor==3.5.1
-mpmath==1.3.0
-multidict==6.1.0
-mypy-extensions==1.0.0
-nbclient==0.9.0
-nbconvert==7.12.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==3.3
-newspaper3k==0.2.8
-nltk==3.9.1
-notebook==7.0.6
-notebook_shim==0.2.3
-numpy==1.26.2
-openai==0.28.0
-opencv-python==4.9.0.80
-overrides==7.4.0
-packaging==23.2
-paho-mqtt==1.6.1
-pandas==2.2.2
-pandocfilters==1.5.0
-paramiko==3.4.0
-parso==0.8.3
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==10.4.0
-pinecone-client==2.2.4
-platformdirs==4.1.0
-postgrest==0.16.9
-prometheus-client==0.19.0
-prompt-toolkit==3.0.41
-protobuf==4.25.3
-psutil==5.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py4j==0.10.9.7
-pyasn1==0.5.1
-pycparser==2.21
-pydantic==2.5.0
-pydantic_core==2.14.1
-Pygments==2.17.2
-pymongo==4.8.0
-PyNaCl==1.5.0
-pyparsing==3.1.4
-pyspark==3.5.0
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-json-logger==2.0.7
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-qtconsole==5.5.1
-QtPy==2.4.1
-realtime==1.0.6
-referencing==0.32.0
-regex==2024.9.11
-requests==2.31.0
-requests-file==2.1.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.13.2
-rsa==4.7
-s3transfer==0.8.0
-safetensors==0.4.5
-scp==0.14.5
-Send2Trash==1.8.2
-sentencepiece==0.2.0
-sentry-sdk==2.1.1
-setproctitle==1.3.3
-sgmllib3k==1.0.0
-shapely==2.0.3
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-stack-data==0.6.3
-starlette==0.37.2
-storage3==0.7.7
-StrEnum==0.4.15
-supabase==2.6.0
-supafunc==0.5.1
-sympy==1.13.3
-terminado==0.18.0
-tinycss2==1.2.1
-tinysegmenter==0.3
-tldextract==5.1.2
-tokenizers==0.20.0
-torch==2.4.1
-torchaudio==2.4.1
-torchvision==0.19.1
-tornado==6.4
-tqdm==4.66.1
-traitlets==5.14.0
-transformers==4.45.1
-typer==0.12.3
-types-python-dateutil==2.8.19.14
-typing_extensions==4.12.2
-tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.0.6
-uvicorn==0.30.3
-uvloop==0.19.0
-virtualenv==20.26.6
-wandb==0.17.0
-watchfiles==0.22.0
-wcwidth==0.2.12
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-websockets==12.0
-Werkzeug==1.0.1
-widgetsnbextension==4.0.9
-yarl==1.13.1
+aiohappyeyeballs
+aiohttp
+aiosignal
+annotated-types
+anyio
+appnope
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+async-lru
+attrs
+awscli
+Babel
+bcrypt
+beautifulsoup4
+black
+bleach
+blinker
+boto3
+botocore
+certifi
+cffi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+cryptography
+cssselect
+cycler
+debugpy
+decorator
+defusedxml
+deprecation
+distlib
+distro
+dnspython
+docker-pycreds
+docutils
+email_validator
+executing
+fastapi
+fastapi-cli
+fastjsonschema
+feedfinder2
+feedparser
+filelock
+Flask
+fonttools
+fqdn
+frozenlist
+fsspec
+gitdb
+GitPython
+gotrue
+h11
+h2
+hpack
+httpcore
+httptools
+httpx
+huggingface-hub
+hyperframe
+idna
+ipykernel
+ipython
+ipywidgets
+isoduration
+isort
+itsdangerous
+jedi
+jieba3k
+Jinja2
+jmespath
+joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
+jupyter
+jupyter-console
+jupyter-events
+jupyter-lsp
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab-widgets
+jupyterlab_pygments
+jupyterlab_server
+kiwisolver
+load-dotenv
+loguru
+lxml
+lxml_html_clean
+markdown-it-py
+MarkupSafe
+matplotlib
+matplotlib-inline
+mdurl
+mistune
+motor
+mpmath
+multidict
+mypy-extensions
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+networkx
+newspaper3k
+nltk
+notebook
+notebook_shim
+numpy
+openai
+opencv-python
+overrides
+packaging
+paho-mqtt
+pandas
+pandocfilters
+paramiko
+parso
+pathspec
+pexpect
+pillow
+pinecone-client
+platformdirs
+postgrest
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+py4j
+pyasn1
+pycparser
+pydantic
+pydantic_core
+Pygments
+pymongo
+PyNaCl
+pyparsing
+pyspark
+python-dateutil
+python-dotenv
+python-json-logger
+python-multipart
+pytz
+PyYAML
+pyzmq
+qtconsole
+QtPy
+realtime
+referencing
+regex
+requests
+requests-file
+rfc3339-validator
+rfc3986-validator
+rich
+rpds-py
+rsa
+s3transfer
+safetensors
+scp
+Send2Trash
+sentencepiece
+sentry-sdk
+setproctitle
+sgmllib3k
+shapely
+shellingham
+six
+smmap
+sniffio
+soupsieve
+stack-data
+starlette
+storage3
+StrEnum
+supabase
+supafunc
+sympy
+terminado
+tinycss2
+tinysegmenter
+tldextract
+tokenizers
+torch
+torchaudio
+torchvision
+tornado
+tqdm
+traitlets
+transformers
+typer
+types-python-dateutil
+typing_extensions
+tzdata
+uri-template
+urllib3
+uvicorn
+uvloop
+virtualenv
+wandb
+watchfiles
+wcwidth
+webcolors
+webencodings
+websocket-client
+websockets
+Werkzeug
+widgetsnbextension
+yarl
